Trying to solve safari flex alignment issues Changed alignment to flex-end instead of "right"

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 .flexright {
-    justify-content: right;
+    justify-content: flex-end;
     align-items: center;
 }
 
